--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 
 
 
-VITE_API_BASE_URL=https://backend-jobportal-final-4.onrender.com/
+VITE_API_BASE_URL=https://backend-jobportal-final-4.onrender.com
